Fixed layout for blockqoutes and made quote visible in toolbar

--- a/public/styles/site/type.less
+++ b/public/styles/site/type.less
@@ -1,3 +1,13 @@
 p {
-  margin: 0 0 (@line-height-computed / 1.5);
+	margin: 0 0 (@line-height-computed / 1.5);
+}
+
+// Blockquotes
+blockquote {
+	padding: 0;
+	font-size: @blockquote-font-size;
+	border-left: 0;
+	>p:before {
+		content: '\2014 \00A0'; // em dash,nbsp;
+	}
 }
